tests/snapshots/run_wpt_conformance__trtx_pow_float16_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pow.https.any.js",
    "pow float16 5D inputs with alternating broadcast axes",
    "trtx",
    Failed {
        msg: Some(
            "pow :: pow float16 5D inputs with alternating broadcast axes: index 1: actual=0.056030273 expected=-15.84375 ulp=30488 tolerance=4\n  inputs: inputA: [17.84375, -0.0631103515625, -9.8671875, 11.1796875, -17.34375, 11.859375, -16.828125, 2.658203125]; inputB: [-1, 1, 3, -2]\n  expected output: [0.056030273, -15.84375, 17.84375, -0.06311035, -0.10131836, 0.08947754, -9.8671875, 11.1796875, 5680, -0.00025129318 ...] (len=32)\n  actual output: [0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273 ...] (len=32)\n  expected output full nd:\n[0.056030273, -15.84375, 17.84375, -0.06311035, -0.10131836, 0.08947754, -9.8671875, 11.1796875, 5680, -0.00025129318, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 1, 2, 1, 2];\n    inputB: f16[1, 2, 1, 2, 1];\n  }\n\n  nodes {\n    [output] = pow(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
