tests/snapshots/run_wpt_conformance__trtx_pow_float16_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pow.https.any.js",
    "pow float16 broadcasting two 5D inputs with a leading batch size of 1",
    "trtx",
    Failed {
        msg: Some(
            "pow :: pow float16 broadcasting two 5D inputs with a leading batch size of 1: index 1: actual=0.056030273 expected=17.84375 ulp=8522 tolerance=4\n  inputs: inputA: [17.84375, -0.0631103515625, -9.8671875, 11.1796875]; inputB: [-1, 1, 3, -2, 2, 1]\n  expected output: [0.056030273, 17.84375, 5680, -15.84375, -0.06311035, -0.00025129318, 0.010269165, 97.375, -9.8671875, 0.008003235 ...] (len=12)\n  actual output: [0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.010269165, 0.010269165, 0.010269165, 0.010269165 ...] (len=12)\n  expected output full nd:\n[0.056030273, 17.84375, 5680, -15.84375, -0.06311035, -0.00025129318, 0.010269165, 97.375, -9.8671875, 0.008003235, ...] (len=12, shape=[1, 2, 2, 1, 3])\n  actual output full nd:\n[0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.056030273, 0.010269165, 0.010269165, 0.010269165, 0.010269165, ...] (len=12, shape=[1, 2, 2, 1, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[1, 2, 2, 1, 1];\n    inputB: f16[1, 2, 1, 1, 3];\n  }\n\n  nodes {\n    [output] = pow(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
