tests/snapshots/run_wpt_conformance__trtx_pow_float32_3D_base_tensor_and_3D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float32 3D base tensor and 3D integer exponent tensor",
    "trtx",
    "PASS",
)
